# foniod

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.toml.example  example_payload.json
.circleci/: config.yml
.dependabot/: config.yml
ansible/roles/ingraind/handlers/: main.yml
ansible/roles/ingraind/vars/: main.yml
benches/: aggregator.rs
bpf/: bpf_helpers.h  connection.h  dns.c  dns.h  file.c  file.h  outbound_tcpv4.c  outbound_tcpv4.h  router.c  router.h  syscall.c  syscall.h  tcpv4.c  tcpv4.h  tls.c  udp.c  udp.h
bpf-sys/: Cargo.toml  build.rs
bpf-sys/src/: lib.rs  perf_reader.rs
bpf/include/: bpf_helpers.h
deploy/ansible/roles/ingraind/tasks/: main.yml
deploy/ansible/roles/ingraind/templates/etc/ingraind/: ingraind.toml.j2
deploy/ansible/roles/ingraind/templates/etc/systemd/system/: ingraind.service.j2
deploy/kubernetes/: config.yaml  ingraind.yaml
docker/: Dockerfile  Dockerfile.builder  Dockerfile.quay  Dockerfile.static  build.sh
execvesniff/: .gitignore  Cargo.toml  README.md
execvesniff/src/: bpf.c  main.rs
ingraind-probes/: Cargo.toml
ingraind-probes/src/: lib.rs
ingraind-probes/src/connection/: main.rs  mod.rs
ingraind-probes/src/dns/: main.rs  mod.rs
ingraind-probes/src/file/: main.rs  mod.rs
ingraind-probes/src/network/: main.rs  mod.rs
ingraind-probes/src/syscalls/: main.rs  mod.rs
ingraind-probes/src/tls/: main.rs
redbpf/: Cargo.toml
redbpf/src/: build.rs  cpus.rs  ffi.rs  lib.rs  perf.rs  uname.rs
redbpf/src/sys/: perf.rs
schema/: ingraind.capnp
src/: bpf.c  config.rs  lib.rs  main.rs
src/aggregations/: aggregator.rs  buffer.rs  container.rs  exec.rs  mod.rs  regex.rs  systemdetails.rs  tag_whitelist.rs  whitelist.rs
src/backends/: console.rs  encoders.rs  http.rs  mod.rs  s3.rs  statsd.rs
src/bpf/: lib.rs  mod.rs
src/grains/: connection.rs  dns.rs  ebpf.rs  ebpf_io.rs  events.rs  file.rs  grain.rs  mod.rs  network.rs  osquery.rs  outbound_tcpv4.rs  perfhandler.rs  sockethandler.rs  statsd.rs  syscalls.rs  tcpv4.rs  test.rs  tls.rs  traffic.rs  udp.rs
src/grains/protocol/: ip.rs  mod.rs
src/metrics/: mod.rs
tcpsniff/: README.md
terraform/: .gitignore  aws.tf  config.toml  instance.tf  run-test.sh
terraform/environment/: aws.tf
tests/eks/: config.yaml  ingraind.yaml  roles.yaml
tests/gke/: config.yaml  ingraind.yaml  ingraind.yaml.in  run-test.sh
tests/terraform/: config.toml  env.sh  env.tf.in  instance.tf  provision-arm64.sh  run-amd64.sh  run-arm64.sh
tests/terraform/environment/: aws.tf
