[package]
name = "ingraind"
version = "0.1.0"
authors = ["Peter Parkanyi <peter@redsift.io>"]
license = "GPL-3.0"
description = "eBPF-based system monitoring agent"
repository = "https://github.com/redsift/ingraind"
build = "build.rs"

[build-dependencies]
failure = "0.1"
redbpf = { version = "0.1.0", features = ["build"] }

[dependencies]
actix = "^0.7"
futures = "^0.1"
tokio = "0.1"

failure = "0.1"

libc = "0.2"
lazy-socket = "0.3"
redbpf = "0.1"

uuid = { version = "0.6", features = ["v4"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
toml = "^0.4"

rustls = "0.13"
epoll = "4.0"
metrohash = "1"
regex = "1.0"

log = "0.4"
env_logger = "^0.5.13"

[dependencies.hyper]
version = "0.12"
optional = true

[dependencies.hyper-rustls]
version = "0.14"
optional = true


[dependencies.cadence]
version =  "0.14"
optional = true

[dependencies.rusoto_core]
version = "0.34.0"
default-features = false
features = ["rustls"]
optional = true

[dependencies.rusoto_s3]
version = "0.34.0"
default-features = false
features = ["rustls"]
optional = true

[features]
default = ["statsd-backend", "s3-backend", "http-backend"]
s3-backend = ["rusoto_core", "rusoto_s3"]
statsd-backend = ["cadence"]
http-backend = ["hyper", "hyper-rustls"]