[package]
name = "ingraind"
version = "0.2.0"
authors = ["Peter Parkanyi <peter@redsift.io>"]
license = "GPL-3.0"
description = "eBPF-based system monitoring agent"
repository = "https://github.com/redsift/ingraind"
build = "build.rs"
edition = "2018"

[build-dependencies]
failure = "0.1"
redbpf = { version = "^0.3.3", features = ["build"] }

[build-dependencies.capnpc]
version = "^0.9.3"
optional = true

[dependencies]
actix = "^0.8"
futures = "^0.1"
tokio = "0.1"
tokio-reactor = "0.1"
tokio-udp = "0.1"
bytes = "0.4"
mio = "0.6"

failure = "0.1"
lazy_static = "1.1.0"

libc = "0.2"
lazy-socket = "0.3"
redbpf = "^0.3.3"

uuid = { version = "0.6", features = ["v4"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
toml = "^0.4"

rustls = "0.15"
epoll = "4.0"
metrohash = "1"
regex = "1.1"

log = { version = "^0.4", features = ["serde"] }
env_logger = "^0.5.13"
syslog = "^4.0"

hdrhistogram = { version = "6.3", default-features = false }

[dependencies.hyper]
version = "0.12"
optional = true

[dependencies.hyper-rustls]
version = "0.16"
optional = true

[dependencies.cadence]
version =  "0.16"
optional = true

[dependencies.capnp]
version = "0.9"
optional = true

# [dependencies.rusoto_core]
# version = "0.36.0"
# default-features = false
# features = ["rustls"]
# optional = true

# [dependencies.rusoto_s3]
# version = "0.36.0"
# default-features = false
# features = ["rustls"]
# optional = true

[features]
default = ["statsd-backend", "http-backend", "capnp-encoding"]
# s3-backend = ["rusoto_core", "rusoto_s3"]
s3-backend = []
statsd-backend = ["cadence"]
http-backend = ["hyper", "hyper-rustls"]
capnp-encoding = ["capnp", "capnpc"]

[profile.release]
lto = "thin"
opt-level = 3
debug = true