[package]
name = "execvesniff-rs"
version = "0.1.0"
authors = ["vagrant"]

[dependencies]
bcc = { path = "rust-bcc" }
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
libc = "0.2"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.6", features = ["v4"] }
