[package]
name = "ingraind-probes"
version = "0.1.0"
edition = '2018'

[dependencies]
cty = "0.2"
redbpf-macros = "^1.1.0"
redbpf-probes = "^1.1.0"
memoffset = "0.5.5"

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "syscalls"
path = "src/syscalls/main.rs"
required-features = ["probes"]

[[bin]]
name = "dns"
path = "src/dns/main.rs"
required-features = ["probes"]

[[bin]]
name = "network"
path = "src/network/main.rs"
required-features = ["probes"]

[[bin]]
name = "tls"
path = "src/tls/main.rs"
required-features = ["probes"]

[[bin]]
name = "file"
path = "src/file/main.rs"
required-features = ["probes"]
